@@ -1,0 +1,3 @@
+#!/usr/bin/env sh
+# Run buildr from source, specifically for testing stuff without doing a rake install.
+ruby -Ilib -Iaddon bin/buildr $*
