@@ -15,14 +15,6 @@
 
 
 $KCODE = 'utf8'
-# in order to work around a bug in jruby (1.0.1 and trunk as of oct11, 2007)
-# needle and net/ssh need to be loaded before -anything- else. please see
-# http://jira.codehaus.org/browse/JRUBY-1188 for more info.
-require 'net/ssh'
-
-require 'highline/import'
-require 'builder' # A different kind of buildr, one we use to create XML.
-
 module Buildr
   VERSION = '1.3.2'.freeze # unless const_defined?(:VERSION)
 end
