@@ -13,8 +13,10 @@
 # License for the specific language governing permissions and limitations under
 # the License.
 
+
 require 'rbconfig'
 require 'pathname'
+require 'builder' # A different kind of buildr, one we use to create XML.
 
 
 module Buildr
