@@ -4,6 +4,8 @@
 * Fixed: BUILDR-76: Added more specs and fixes to compile task.
 * Fixed: BUILDR-80: Fix reference to Util#timestamp method on nailgun addon.
 * Fixed: BUILDR-79: Remove :source option for Scala compiler
+* Fixed: BUILDR-82: Temporary work around for Net::SSH 2.0.2 attempting to
+load Pageant DLLs when running on JRuby/Windows.
 
 1.3.1.1 (2008-06-04)
 * Fixed: BUILDR-78 Broken dependency on Rubyforge Gem.
